--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint src/**/*.{js,ts,jsx,tsx}",
+    "lint": "eslint \"**/*.{js,ts}\"",
     "lint:fix": "eslint 'src/**/*.{js,ts}' --fix"
   },
   "dependencies": {
@@ -46,6 +46,8 @@
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "firebase": "^11.0.1",
+    "firebase-admin": "^13.0.2",
+    "firebase-functions": "^6.3.1",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.10",
     "html2canvas": "^1.4.1",
